[gd_scene load_steps=20 format=4 uid="uid://ct5hekqr35kpm"]

[ext_resource type="Texture2D" uid="uid://hp434qvqcww2" path="res://Sprites/Prototype/ground.png" id="1_6ed6c"]
[ext_resource type="Script" path="res://Scripts/Grid/Grid.gd" id="1_vo475"]
[ext_resource type="Texture2D" uid="uid://bmafeh41mv4ja" path="res://Sprites/Prototype/select-cursor.png" id="2_a4oga"]
[ext_resource type="Texture2D" uid="uid://cbsc7ydtafhom" path="res://Sprites/Prototype/obstacle.png" id="2_gdea5"]
[ext_resource type="Texture2D" uid="uid://cppm06x3vkcub" path="res://Sprites/Prototype/main-character-path.png" id="3_vjtpf"]
[ext_resource type="Texture2D" uid="uid://40ywqg8vb31l" path="res://Sprites/Prototype/target-path.png" id="4_s1bld"]
[ext_resource type="PackedScene" uid="uid://bg1iiqsskh3fn" path="res://Scenes/Character/main_character.tscn" id="7_2phpi"]
[ext_resource type="Texture2D" uid="uid://ppkfba1v8m6g" path="res://Sprites/Prototype/destination.png" id="7_qxj2o"]
[ext_resource type="Script" path="res://Scripts/Animation/CustomAnimation.gd" id="8_4gu7f"]
[ext_resource type="PackedScene" uid="uid://c5icvfyyatrwy" path="res://Scenes/Destination/destination.tscn" id="8_hfh6p"]
[ext_resource type="Script" path="res://Scripts/GUI/DisplayInput.gd" id="9_47kkx"]

[sub_resource type="TileSet" id="TileSet_vue63"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_8381p"]
texture = ExtResource("1_6ed6c")
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_0jy6g"]
texture = ExtResource("2_gdea5")
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_723cb"]
texture = ExtResource("3_vjtpf")
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_shg4g"]
texture = ExtResource("4_s1bld")
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_xd872"]
texture = ExtResource("2_a4oga")
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_2uor1"]
texture = ExtResource("7_qxj2o")
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_0axwb"]
physics_layer_0/collision_layer = 2
physics_layer_0/collision_mask = 0
sources/4 = SubResource("TileSetAtlasSource_xd872")
sources/0 = SubResource("TileSetAtlasSource_8381p")
sources/1 = SubResource("TileSetAtlasSource_0jy6g")
sources/2 = SubResource("TileSetAtlasSource_723cb")
sources/3 = SubResource("TileSetAtlasSource_shg4g")
sources/5 = SubResource("TileSetAtlasSource_2uor1")

[node name="Sample_level" type="Node2D"]
texture_filter = 1

[node name="TileMap" type="TileMapLayer" parent="."]
tile_set = SubResource("TileSet_vue63")
script = ExtResource("1_vo475")

[node name="Path" type="TileMapLayer" parent="TileMap"]
use_parent_material = true
tile_map_data = PackedByteArray("AAAAAAAAAAAAAAAAAAAAAAEAAAAAAAAAAAAAAAIAAAAAAAAAAAAAAAMAAAAAAAAAAAAAAAQAAAAAAAAAAAAAAAUAAAAAAAAAAAAAAAYAAAAAAAAAAAAAAAcAAAAAAAAAAAAAAAgAAAAAAAAAAAAAAAkAAAAAAAAAAAAAAAoAAAAAAAAAAAAAAAsAAAAAAAAAAAABAAsAAAAAAAAAAAACAAsAAAAAAAAAAAADAAsAAAAAAAAAAAAEAAsAAAAAAAAAAAAFAAsAAAAAAAAAAAAGAAsAAAAAAAAAAAAHAAsAAAAAAAAAAAAIAAsAAAAAAAAAAAAJAAsAAAAAAAAAAAAKAAsAAAAAAAAAAAALAAsAAAAAAAAAAAAMAAsAAAAAAAAAAAANAAsAAAAAAAAAAAAOAAsAAAAAAAAAAAAPAAsAAAAAAAAAAAAQAAsAAAAAAAAAAAARAAsAAAAAAAAAAAASAAsAAAAAAAAAAAATAAsAAAAAAAAAAAATAAAAAAAAAAAAAAABAAAAAAAAAAAAAAACAAAAAAAAAAAAAAADAAAAAAAAAAAAAAAEAAAAAAAAAAAAAAAFAAAAAAAAAAAAAAAGAAAAAAAAAAAAAAAHAAAAAAAAAAAAAAAIAAAAAAAAAAAAAAAJAAAAAAAAAAAAAAAKAAAAAAAAAAAAAAALAAAAAAAAAAAAAAAMAAAAAAAAAAAAAAANAAAAAAAAAAAAAAAOAAAAAAAAAAAAAAAPAAAAAAAAAAAAAAAQAAAAAAAAAAAAAAARAAAAAAAAAAAAAAASAAAAAAAAAAAAAAATAAEAAAAAAAAAAAATAAIAAAAAAAAAAAATAAMAAAAAAAAAAAATAAQAAAAAAAAAAAATAAUAAAAAAAAAAAATAAYAAAAAAAAAAAATAAcAAAAAAAAAAAATAAgAAAAAAAAAAAATAAkAAAAAAAAAAAATAAoAAAAAAAAAAAAKAAQAAAAAAAAAAAAKAAUAAAAAAAAAAAAKAAYAAAAAAAAAAAAJAAUAAAAAAAAAAAALAAUAAAAAAAAAAAAKAAcAAAAAAAAAAAAJAAcAAAAAAAAAAAAJAAYAAAAAAAAAAAAJAAQAAAAAAAAAAAAIAAUAAAAAAAAAAAAIAAYAAAAAAAAAAAALAAYAAAAAAAAAAAA=")
tile_set = SubResource("TileSet_0axwb")

[node name="Obstacle" type="TileMapLayer" parent="TileMap"]
z_index = 1
use_parent_material = true
tile_map_data = PackedByteArray("AAAEAAcAAQAAAAAAAAAFAAcAAQAAAAAAAAAGAAcAAQAAAAAAAAARAAcAAQAAAAAAAAARAAgAAQAAAAAAAAARAAkAAQAAAAAAAAAQAAkAAQAAAAAAAAAPAAkAAQAAAAAAAAAGAAYAAQAAAAAAAAAMAAQAAQAAAAAAAAAMAAUAAQAAAAAAAAALAAUAAQAAAAAAAAALAAYAAQAAAAAAAAALAAcAAQAAAAAAAAAKAAcAAQAAAAAAAAAKAAgAAQAAAAAAAAAGAAMAAQAAAAAAAAAHAAMAAQAAAAAAAAAIAAMAAQAAAAAAAAAJAAMAAQAAAAAAAAAJAAQAAQAAAAAAAAAPAAQAAQAAAAAAAAAPAAMAAQAAAAAAAAAPAAIAAQAAAAAAAAAQAAQAAQAAAAAAAAAQAAUAAQAAAAAAAAAOAAIAAQAAAAAAAAALAAgAAQAAAAAAAAALAAkAAQAAAAAAAAA=")
tile_set = SubResource("TileSet_0axwb")

[node name="Player_path" type="TileMapLayer" parent="TileMap"]
z_index = 2
use_parent_material = true
tile_set = SubResource("TileSet_0axwb")

[node name="Target_path" type="TileMapLayer" parent="TileMap"]
z_index = 3
use_parent_material = true
tile_set = SubResource("TileSet_0axwb")

[node name="Destination" type="TileMapLayer" parent="TileMap"]
z_index = 3
use_parent_material = true
tile_map_data = PackedByteArray("AAASAAoABQAAAAAAAAA=")
tile_set = SubResource("TileSet_0axwb")

[node name="Mouse_layer" type="TileMapLayer" parent="TileMap"]
z_index = 8
use_parent_material = true
tile_set = SubResource("TileSet_0axwb")

[node name="MainCharacter" parent="." node_paths=PackedStringArray("grid") instance=ExtResource("7_2phpi")]
position = Vector2(136, 88)
grid = NodePath("../TileMap")

[node name="Destination" parent="." instance=ExtResource("8_hfh6p")]
visible = false
position = Vector2(296, 168)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(155, 98)
zoom = Vector2(2.64, 2.64)

[node name="CustomTween" type="Node2D" parent="."]
script = ExtResource("8_4gu7f")

[node name="Control" type="Control" parent="." node_paths=PackedStringArray("label")]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("9_47kkx")
label = NodePath("Label")

[node name="Panel" type="Panel" parent="Control"]
layout_mode = 0
offset_left = -51.0
offset_top = 184.0
offset_right = -5.0
offset_bottom = 208.0
scale = Vector2(0.978941, 1.02962)

[node name="Label" type="Label" parent="Control"]
layout_mode = 0
offset_left = -45.0
offset_top = 186.0
offset_right = -3.0
offset_bottom = 209.0
scale = Vector2(0.753247, 0.837209)
text = "Input"
horizontal_alignment = 1
